--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,10 @@ subtitle: Your site's subtitle
 email: your-email@example.com
 footer-text: <a href="https://github.com/BLumia/jekyll-theme-mutter">Mutter</a> theme build with <i class="i i-heart"></i> on <i class="i i-octodex"></i>
 footer-copyright: Your Name &copy; Year
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "header_pages:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 header_pages:
   - index.md
