--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,14 @@ header_pages:
   - posts.md
   - about.md
 
+defaults: # leave some default front-matter for posts
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
+
 # Build settings
 theme: jekyll-theme-mutter
 markdown: kramdown
